--- a/mean/public/modules/worklist/views/worklist.client.view.html
+++ b/mean/public/modules/worklist/views/worklist.client.view.html
@@ -3,9 +3,15 @@
 		<h1>Work List</h1>
 	</div>
 	<div class="container">
-		<div class="boxed">
+
+		<div ng-if="!platesExist">
+			There are no plates in your work list
+		</div>
+
+		<div class="boxed" ng-repeat="plates in groupOfPlates" ng-if="plates.length > 0">
+
 			<div>
-				<h3>Normalization</h3>
+				<h3>{{stageNumberToName[plates[0].stage]}}</h3>
 				<button type="button" class="btn btn-default performButton">Perform selected</button>
 			</div>
 			<table class="table table-striped">
@@ -15,26 +21,11 @@
 					<td>Number of Samples</td>
 					<td></td>
 				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P1</td>
-					<td>1</td>
-					<td>96</td>
-					<td>
-						<input type="checkbox" value="checked">
-					</td>
-				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P1</td>
-					<td>1</td>
-					<td>96</td>
-					<td>
-						<input type="checkbox" value="checked">
-					</td>
-				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P1</td>
-					<td>1</td>
-					<td>96</td>
+
+				<tr class="aPlate" ng-repeat="plate in plates">
+					<td>{{plate.plateCode}}</td>
+					<td>{{plate.stage}}</td>
+					<td>{{plate.samples.length}}</td>
 					<td>
 						<input type="checkbox" value="checked">
 					</td>
@@ -42,43 +33,5 @@
 			</table>
 		</div>
 
-		<div class="boxed">
-			<div>
-				<h3>Quantification</h3>
-				<button type="button" class="btn btn-default performButton">Perform selected</button>
-			</div>
-			<table class="table table-striped">
-				<tr>
-					<td>Plate Code</td>
-					<td>Latest Step</td>
-					<td>Number of Samples</td>
-					<td></td>
-				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P2</td>
-					<td>1</td>
-					<td>96</td>
-					<td>
-						<input type="checkbox" value="checked">
-					</td>
-				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P1</td>
-					<td>1</td>
-					<td>96</td>
-					<td>
-						<input type="checkbox" value="checked">
-					</td>
-				</tr>
-				<tr class="aPlate">
-					<td>3_020301_P1</td>
-					<td>1</td>
-					<td>96</td>
-					<td>
-						<input type="checkbox" value="checked">
-					</td>
-				</tr>
-			</table>
-		</div>
 	</div>
 </section>
