--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -91,8 +91,9 @@
 	    <br>
 	    <div class="row">
                 <div class="text-center">
-                    <a class="btn btn-primary" data-ng-click="grayOut || generatePlates()">
-                        Read Plate Layout
+			<input type="file" ng-file-select="onFileSelect($files)">
+			<a class="btn btn-primary" data-multiple="true">
+                        Upload Plate Layout
                         <i class="glyphicon glyphicon-edit"></i>
                     </a>
                 </div>
