Made error message dialogs for addingPlates page

--- a/mean/public/modules/plates/views/list-plates.client.view.html
+++ b/mean/public/modules/plates/views/list-plates.client.view.html
@@ -21,3 +21,12 @@
         <button type="button" class="ngdialog-button ngdialog-button-secondary" data-ng-click="closeDialog()">Cancel</button>
     </div>
 </script>
+<script type="text/ng-template" id="errorDialog">
+    <div class="ngdialog-message form-group">
+      <h2>Error</h2>
+      <h5>{{error}}</h5>
+    </div>
+    <div class="ngdialog-buttons">
+        <button type="button" class="ngdialog-button ngdialog-button-primary" data-ng-click="closeDialog()">Cancel</button>
+    </div>
+</script>
