--- a/mean/public/modules/plates/views/list-plates.client.view.html
+++ b/mean/public/modules/plates/views/list-plates.client.view.html
@@ -1,8 +1,15 @@
 <section data-ng-controller="PlatesController" data-ng-init="init()">
   <div ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
     <div class="page-header">
-      <h1>All Plates</h1>
+      <h1>Plates</h1>
     </div>
+  <div role="navigation">
+    <ul class="nav nav-tabs">
+      <li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[unassignedTab]"><a data-ng-click="switchTab('unassigned')">Unassigned</a></li>
+      <li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[assignedTab]"><a data-ng-click="switchTab('assigned')">Assigned</a></li>
+      <li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[allTab]"><a data-ng-click="switchTab('all')">All</a></li>
+    </ul>
+  </div>
     <div ng-if="gridReady && plateList.length && authentication.user">
       <ng-react-grid grid="grid"></ng-react-grid>
     </div>
