Refactoring worklist directive to be more reusable

--- a/mean/public/modules/worklist/views/worklist.client.view.html
+++ b/mean/public/modules/worklist/views/worklist.client.view.html
@@ -8,11 +8,11 @@
 			There are no plates in your work list
 		</div>
 
-		<div class="boxed" ng-repeat="plates in groupOfPlates" ng-if="plates.length > 0" my-worklist-stage>
+		<div class="boxed" ng-repeat="plates in groupOfPlates" ng-if="plates.length > 0" my-worklist-selected>
 
 			<div>
 				<h3>{{stageNumberToName[plates[0].stage]}}</h3>
-				<button type="button" class="btn btn-default performButton" data-ng-click="directToStagePage(stageNumberToUrl[plates[0].stage], stageSelectedPlates)">Perform selected</button>
+				<button type="button" class="btn btn-default performButton" data-ng-click="directToPage(stageNumberToUrl[plates[0].stage], selectedPlates)">Perform selected</button>
 			</div>
 			<table class="table table-striped">
 				<tr>
@@ -21,7 +21,7 @@
 					<td></td>
 				</tr>
 
-				<tr class="aPlate" ng-repeat="plate in plates" my-worklist-plate my-plate-object="plate" my-stage-selected-plates="stageSelectedPlates" my-plate-checked="plateChecked" my-clicked-not-on-checkbox="clickNotOnCheckBox" my-clicked-checkbox="clickCheckBox">
+				<tr class="aPlate" ng-repeat="plate in plates" my-worklist-plate my-plate-object="plate" my-selected-plates="selectedPlates" my-plate-checked="plateChecked" my-clicked-not-on-checkbox="clickNotOnCheckBox" my-clicked-checkbox="clickCheckBox">
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.plateCode}}</td>
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.samples.length}}</td>
 					<td>
