Setting project delete button to red to reflect a risk in deleting the project

--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -74,7 +74,7 @@
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
                 &nbsp
-                <a class="btn btn-primary" data-ng-click="grayOut || confirmRemove();">
+                <a class="btn btn-danger" data-ng-click="grayOut || confirmRemove();">
                     Delete
                     <i class="glyphicon glyphicon-trash"></i>
                 </a>
