--- a/mean/public/modules/core/views/header.client.view.html
+++ b/mean/public/modules/core/views/header.client.view.html
@@ -33,6 +33,7 @@
 			<li>
 				<a href="/#!/worklist">
 					<span>Work List</span>
+					<span class="badge">42</span>
 				</a>
 			</li>
 			<li class="dropdown">
