Work list size icon
The work list size icon now updates when a user adds a plate to their
work list. Decrementing the size when a user removes a plate from their
work list still needs to be implemented.

Emit 'workListUpdated' whenever the work list size icon should be
decremented/incremented
$scope.emit('workListUpdated');

--- a/mean/public/modules/core/views/header.client.view.html
+++ b/mean/public/modules/core/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container" data-ng-controller="HeaderController">
+<div class="container" data-ng-controller="HeaderController" ng-init="init()">
 	<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
 			<span class="sr-only">Toggle navigation</span>
@@ -33,7 +33,7 @@
 			<li>
 				<a href="/#!/worklist">
 					<span>Work List</span>
-					<span class="badge">42</span>
+					<span class="badge">{{sizeOfWorklist}}</span>
 				</a>
 			</li>
 			<li class="dropdown">
