--- a/mean/public/modules/worklist/views/worklist.client.view.html
+++ b/mean/public/modules/worklist/views/worklist.client.view.html
@@ -26,7 +26,7 @@
 
 				<tr class="aPlate" ng-repeat="plate in plates" my-worklist-plate my-remove-plate-function="removePlate" my-plate-object="plate" my-selected-plates="selectedPlates" my-plate-checked="plateChecked" my-clicked-not-on-checkbox="clickNotOnCheckBox" my-clicked-checkbox="clickCheckBox">
 					<td>
-						<button class="btn btn-default" data-ng-click="removePlate(plate)">Remove</button>
+						<button class="btn btn-default" data-ng-click="removePlate(plate, plates)">Remove</button>
 					</td>
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.plateCode}}</td>
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.samples.length}}</td>
