--- a/mean/public/modules/customers/views/create-customer.client.view.html
+++ b/mean/public/modules/customers/views/create-customer.client.view.html
@@ -20,7 +20,7 @@
 				<div class="form-group" ng-class="{ 'has-error': customerForm.email.$dirty && customerForm.email.$invalid }">
 					<label class="control-label" for "email">E-Mail Address</label>
 					<div class="controls">
-						<input name="email" type="email" data-ng-model="email" id="email" class="form-control" placeholder="example@example.com" required/>
+						<input name="email" ng-pattern='/^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/' data-ng-model="email" id="email" class="form-control" placeholder="example@example.com" required/>
 					</div>
 				</div>
 				<div class="form-group">
