--- a/mean/public/modules/customers/views/create-customer.client.view.html
+++ b/mean/public/modules/customers/views/create-customer.client.view.html
@@ -11,7 +11,7 @@
 						<input name="name" type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required/>
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group" ng-class="{ 'has-error': customerForm.code.$dirty && customerForm.code.length !== 0 }">
 					<label class="control-label" for="code">3 Character Identifier</label>
 					<div class="controls">
 					    <input name="code" type="text" maxlength="3" data-ng-model="code" ng-change="validateCode()" id="code" class="form-control" placeholder="ABC" required/>
@@ -20,7 +20,7 @@
 				<div class="form-group" ng-class="{ 'has-error': customerForm.email.$dirty && customerForm.email.$invalid }">
 					<label class="control-label" for "email">E-Mail Address</label>
 					<div class="controls">
-						<input name="email" ng-pattern='/^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/' data-ng-model="email" id="email" class="form-control" placeholder="example@example.com" required/>
+						<input name="email" ng-pattern="/^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/" data-ng-model="email" id="email" class="form-control" placeholder="example@example.com" required/>
 					</div>
 				</div>
 				<div class="form-group">
