fixed delete project button\nnot sure when, but this became unwired

--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -144,7 +144,7 @@
         <h5>This project will be permanently deleted</h5>
     </div>
     <div class="ngdialog-buttons">
-        <button type="button" class="ngdialog-button ngdialog-button-primary" data-ng-click="remove()">Delete Project</button>
+        <button type="button" class="ngdialog-button ngdialog-button-primary" data-ng-click="remove(project)">Delete Project</button>
         <button type="button" class="ngdialog-button ngdialog-button-secondary" data-ng-click="closeDialog()">Cancel</button>
     </div>
 </script>
