--- a/mean/public/modules/organisms/views/create-organism.client.view.html
+++ b/mean/public/modules/organisms/views/create-organism.client.view.html
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 				<div class="form-group text-center">
-					<input type="submit" class="btn btn-default">&nbsp
+					<input id="submitButton" type="submit" class="btn btn-default">&nbsp
 					<a href back-button class="btn btn-default">Back</a>
 				</div>
 				<div data-ng-show="error" class="text-danger">
