Selecting a plate in the projects view had inconsistent weird hover colorings for the table. I made it more consistent with the table that we see in the worklist

--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -128,3 +128,7 @@
 .form-control-static.col-xs-4:hover {
     cursor: pointer;
 }
+
+.bs-callout table tr:not(:first-child):nth-child(odd):hover td{
+    background: #dbdbdb;
+}
