Removing multiple plates from worklist
Users can now select multiple plates to remove from their worklist.
Simply select the plates to remove then click on the trashcan.

--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -27,3 +27,22 @@ td{
     text-align: center;
     horiz-align: center;
 }
+
+.doneButton:hover{
+    cursor: pointer;
+}
+
+.removePlatesButton{
+    float: right;
+    position: relative;
+}
+
+.removePlatesButton:hover{
+    cursor: pointer;
+}
+
+.removePlatesImage{
+    margin: 0 auto;
+    float: right;
+    position: relative;
+}
