Change remove plates button image to open trash can on cursor hover

--- a/mean/public/modules/worklist/views/worklist.client.view.html
+++ b/mean/public/modules/worklist/views/worklist.client.view.html
@@ -32,8 +32,9 @@
 				</tr>
 			</table>
 			<div class="removePlatesButton" data-ng-click="removePlates(stagePlates, selectedPlates)">
-				<img alt="Delete plate" class="img-responsive img-rounded removePlatesImage" src="imgs/trashcan.png"/>
-				<!--<div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>-->
+				<a><img src="modules/worklist/imgs/trashcan.png" onmouseover="this.src='modules/worklist/imgs/trashcanopen.png'" onmousedown="this.src='modules/worklist/imgs/trashcan.png'" onmouseout="this.src='modules/worklist/imgs/trashcan.png'"> </a>
+				<!--<div>Closed trash can made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>-->
+				<!--<div>Open trash can made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>-->
 			</div>
 		</div>
 		<br>
