Changed the select all plates button
I changed the select all plates button on the work list page, because 5/6
test users didn't know what the checkbox was for. Once I told them what it
does, they thought it should say "Select all".

--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -26,6 +26,7 @@ h3{
 td{
     text-align: center;
     horiz-align: center;
+    vertical-align: middle;
 }
 
 .doneButton:hover{
@@ -45,4 +46,8 @@ td{
     margin: 0 auto;
     float: right;
     position: relative;
+}
+
+.selectAllButton:hover{
+    cursor: pointer;
 }
