--- a/mean/public/modules/worklist/views/worklist.client.view.html
+++ b/mean/public/modules/worklist/views/worklist.client.view.html
@@ -19,7 +19,7 @@
 					<td>Plate Code</td>
 					<td>Number of Samples</td>
 					<td>
-						<input class="checkbox" type="checkbox" value="checked" data-ng-model="selectedAllPlates" data-ng-click="selectAll(stagePlates)">
+						<a class="selectAllButton" data-ng-click="selectAll(stagePlates)">Select all</a>
 					</td>
 				</tr>
 
@@ -27,7 +27,7 @@
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.plateCode}}</td>
 					<td data-ng-click="clickNotOnCheckBox()">{{plate.samples.length}}</td>
 					<td>
-						<input class="checkbox" type="checkbox" value="checked" data-ng-model="plateChecked" data-ng-click="clickCheckBox()">
+						<input type="checkbox" value="checked" data-ng-model="plateChecked" data-ng-click="clickCheckBox()" >
 					</td>
 				</tr>
 			</table>
