Added an 'increment' button for the steps pages. This will allow all Plates that are selected in the worklist for this step to be incremented in the database.  It will also remove them from the user's worklist.

--- a/mean/public/modules/steps/views/sample-arrival.client.view.html
+++ b/mean/public/modules/steps/views/sample-arrival.client.view.html
@@ -4,5 +4,10 @@
         <h3>Sample Arrival</h3>
         <br>
         Lab techs will scan barcodes to record sample arrivals on this page.
+	<div class="text-center">
+		<button class="btn btn-primary" ng-click="incrementPlates()">
+		    Confirm
+		</button>
+	</div>
     </div>
 </section>
