--- a/mean/public/modules/steps/views/quantification.client.view.html
+++ b/mean/public/modules/steps/views/quantification.client.view.html
@@ -4,5 +4,11 @@
         <h3>Quantification</h3>
         <br>
         Lab techs will see a list of steps for performing quantification and input the results onto this page. Per-plate sample population will occur on this page with a file upload dialogue.
+	<div class="text-center">
+		<button class="btn btn-primary" ng-click="incrementPlates()">
+		    Confirm
+		</button>
+	</div>
+
     </div>
 </section>
