--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -35,6 +35,7 @@ td{
 }
 
 .removePlatesButton{
+    padding: 3px 0 3px 0;
     float: right;
     position: relative;
 }
@@ -44,7 +45,6 @@ td{
 }
 
 .removePlatesImage{
-    margin: 0 auto;
     float: right;
     position: relative;
 }
