Began fixing the worklist button indicator update on incrementation

--- a/mean/public/modules/steps/views/normalization.client.view.html
+++ b/mean/public/modules/steps/views/normalization.client.view.html
@@ -5,7 +5,7 @@
         <br>
         Lab techs will see a list of steps for performing normalization and enter the results on this page.
 	<div class="text-center">
-		<button class="btn btn-primary" ng-click="incrementPlates()">
+		<button class="btn btn-primary" ng-click="incrementPlates($scope.returnToWorklist())">
 		    Confirm
 		</button>
 	</div>
