--- a/mean/public/modules/steps/views/quantification.client.view.html
+++ b/mean/public/modules/steps/views/quantification.client.view.html
@@ -5,7 +5,7 @@
         <br>
         Lab techs will see a list of steps for performing quantification and input the results onto this page. Per-plate sample population will occur on this page with a file upload dialogue.
 	<div class="text-center">
-		<button class="btn btn-primary" ng-click="incrementPlates()">
+		<button class="btn btn-primary" ng-click="incrementPlates(returnToWorklist())">
 		    Confirm
 		</button>
 	</div>
