--- a/mean/public/modules/steps/views/sample-arrival.client.view.html
+++ b/mean/public/modules/steps/views/sample-arrival.client.view.html
@@ -5,7 +5,7 @@
         <br>
         Lab techs will scan barcodes to record sample arrivals on this page.
 	<div class="text-center">
-		<button class="btn btn-primary" ng-click="incrementPlates()">
+		<button class="btn btn-primary" ng-click="incrementPlates($scope.returnToWorklist())">
 		    Confirm
 		</button>
 	</div>
