Updated the pages with the steps in a nicer formatted table.
However, I'm not sure how to place the substeps, and the sub-substeps in
the table.

--- a/mean/public/modules/steps/views/normalization.client.view.html
+++ b/mean/public/modules/steps/views/normalization.client.view.html
@@ -1,14 +1,29 @@
 <section data-ng-controller="StepsController">
-    <br>
-    <div class="text-center">
-        <h3>Normalization</h3>
-        <br>
-        Lab techs will see a list of steps for performing normalization and enter the results on this page.
-	<div class="text-center">
-		<button class="btn btn-primary" ng-click="incrementPlates($scope.returnToWorklist())">
-		    Confirm
-		</button>
-	</div>
-
-    </div>
+<div class="boxed text-center">
+	<h3>DNA Normalization</h3>
+	<h4>Procedure:</h4>
+	<table class="table table-striped">
+		<tr>
+			<td>
+				1. Scan the barcode
+			</td>
+		</tr>
+		<tr>
+			<td>
+				2. Open Software
+			</td>
+		</tr>
+		<tr>
+			<td>
+				3. After the method finishes, seal and mix
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<button class="btn btn-primary" ng-click="incrementPlates()">
+				    Confirm
+				</button>
+			</td>
+		</tr>
+	</table>
 </section>
