--- a/mean/public/modules/steps/views/quantification.client.view.html
+++ b/mean/public/modules/steps/views/quantification.client.view.html
@@ -1,14 +1,55 @@
 <section data-ng-controller="StepsController">
-    <br>
-    <div class="text-center">
-        <h3>Quantification</h3>
-        <br>
-        Lab techs will see a list of steps for performing quantification and input the results onto this page. Per-plate sample population will occur on this page with a file upload dialogue.
-	<div class="text-center">
-		<button class="btn btn-primary" ng-click="incrementPlates(returnToWorklist())">
-		    Confirm
-		</button>
-	</div>
-
+    <div class="boxed text-center">
+        <h3>DNA Quantification</h3>
+	<h4>Procedure:</h4>
+	<table class="table table-striped">
+		<tr>
+			<td>
+				1. Add Quantification mastermix
+			</td>
+		</tr>
+		<tr>
+			<td>
+				2. Add samples to respective wells (each sample will have 2 reps)
+			</td>
+		</tr>
+		<tr>
+			<td>
+				3. Add DNA dye
+			</td>
+		</tr>
+		<tr>
+			<td>
+				4. Incubate
+			</td>
+		</tr>
+		<tr>
+			<td>
+				5. Run Software
+			</td>
+		</tr>
+		<tr>
+			<td>
+				6. Export and save file
+			</td>
+		</tr>
+		<tr>
+			<td>
+				7. Translate data
+			</td>
+		</tr>
+		<tr>
+			<td>
+				8. Use for normalization
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<button class="btn btn-primary" ng-click="incrementPlates()">
+				    Confirm
+				</button>
+			</td>
+		</tr>
+	</table>
     </div>
 </section>
