Added 'Shearing' step and Logic

--- a/mean/public/modules/steps/views/normalization.client.view.html
+++ b/mean/public/modules/steps/views/normalization.client.view.html
@@ -1,29 +1,30 @@
 <section data-ng-controller="StepsController">
-<div class="boxed text-center">
-	<h3>DNA Normalization</h3>
-	<h4>Procedure:</h4>
-	<table class="table table-striped">
-		<tr>
-			<td>
-				1. Scan the barcode
-			</td>
-		</tr>
-		<tr>
-			<td>
-				2. Open Software
-			</td>
-		</tr>
-		<tr>
-			<td>
-				3. After the method finishes, seal and mix
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<button class="btn btn-primary" ng-click="incrementPlates()">
-				    Confirm
-				</button>
-			</td>
-		</tr>
-	</table>
+	<div class="boxed text-center">
+		<h3>DNA Normalization</h3>
+		<h4>Procedure:</h4>
+		<table class="table table-striped">
+			<tr>
+				<td>
+					1. Scan the barcode
+				</td>
+			</tr>
+			<tr>
+				<td>
+					2. Open Software
+				</td>
+			</tr>
+			<tr>
+				<td>
+					3. After the method finishes, seal and mix
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<button class="btn btn-primary" ng-click="incrementPlates()">
+					    Confirm
+					</button>
+				</td>
+			</tr>
+		</table>
+	</div>
 </section>
