Added support for all steps in the client routes for the steps module.
Typed up the end-repair html view.

Still not sure how to do substeps

--- a/mean/public/modules/steps/views/normalization.client.view.html
+++ b/mean/public/modules/steps/views/normalization.client.view.html
@@ -4,19 +4,13 @@
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
 			<tr>
-				<td>
-					1. Scan the barcode
-				</td>
+				<td>1. Scan the barcode</td>
 			</tr>
 			<tr>
-				<td>
-					2. Open Software
-				</td>
+				<td>2. Open Software</td>
 			</tr>
 			<tr>
-				<td>
-					3. After the method finishes, seal and mix
-				</td>
+				<td>3. After the method finishes, seal and mix</td>
 			</tr>
 			<tr>
 				<td>
