--- a/mean/public/modules/steps/views/sample-arrival.client.view.html
+++ b/mean/public/modules/steps/views/sample-arrival.client.view.html
@@ -4,9 +4,7 @@
 	<h4>Procedure:</h4>
 		<table class="table table-striped">
 			<tr>
-				<td>
-				Scan CLIENT plate barcode
-				</td>
+				<td>Scan CLIENT plate barcode</td>
 			</tr>
 			<tr>
 				<td>
