--- a/mean/public/modules/steps/views/shearing.client.view.html
+++ b/mean/public/modules/steps/views/shearing.client.view.html
@@ -16,7 +16,7 @@
 				<td>4. Prepare Sonicator</td>
 			</tr>
 			<tr>
-				<td>5. Prepare Sonicator</td>
+				<td>5. Turn on machine, and select desired program</td>
 			</tr>
 			<tr>
 				<td>6. Select <b>Run</b>, and press <b>Start</b> at the designated time</td>
