--- a/mean/public/modules/steps/views/quantification.client.view.html
+++ b/mean/public/modules/steps/views/quantification.client.view.html
@@ -4,44 +4,28 @@
 	<h4>Procedure:</h4>
 		<table class="table table-striped">
 			<tr>
-				<td>
-					1. Add Quantification mastermix
-				</td>
+				<td>1. Add Quantification mastermix</td>
 			</tr>
 			<tr>
-				<td>
-					2. Add samples to respective wells (each sample will have 2 reps)
-				</td>
+				<td>2. Add samples to respective wells (each sample will have 2 reps)</td>
 			</tr>
 			<tr>
-				<td>
-					3. Add DNA dye
-				</td>
+				<td>3. Add DNA dye</td>
 			</tr>
 			<tr>
-				<td>
-					4. Incubate
-				</td>
+				<td>4. Incubate</td>
 			</tr>
 			<tr>
-				<td>
-					5. Run Software
-				</td>
+				<td>5. Run Software</td>
 			</tr>
 			<tr>
-				<td>
-					6. Export and save file
-				</td>
+				<td>6. Export and save file</td>
 			</tr>
 			<tr>
-				<td>
-					7. Translate data
-				</td>
+				<td>7. Translate data</td>
 			</tr>
 			<tr>
-				<td>
-					8. Use for normalization
-				</td>
+				<td>8. Use for normalization</td>
 			</tr>
 			<tr>
 				<td>
